hide feedback form
hide feedback form if array is empty and disable buttons if form is
invalid

--- a/Webb/loggedin.html
+++ b/Webb/loggedin.html
@@ -83,14 +83,14 @@
             </center>
             <center>
                 <h4 class="text-center"><strong>Anmäl din närvaro: </strong></h4>
-                <form>
+                <form name="myForm">
                     <label for="chooseCourse">Välj kurs: </label>
-                    <select id="chooseCourse" ng-model="courseAttended" required>
+                    <select name="kurs" id="chooseCourse" ng-model="courseAttended" required>
                     <option ng-repeat="course in myCourses" ng-show="{{course.details.status === 'progress'}}">{{course.details.courseCode}}</option>
                 </select>
                     <label for="codeInput">Närvarokod: </label>
-                    <input type="text" id="codeInput" placeholder="ange koden här" ng-model="attendanceCode" required><br><br>
-                    <button type="button" class="btn btn-success" ng-click="attendance(courseAttended, attendanceCode)">I'm here!</button>
+                    <input name="kod" type="text" id="codeInput" placeholder="ange koden här" ng-model="attendanceCode" required><br><br>
+                    <button ng-disabled="myForm.kurs.$invalid || myForm.kod.$invalid" type="button" class="btn btn-success" ng-click="attendance(courseAttended, attendanceCode)">I'm here!</button>
                 </form>
                 <center>
         </div>
@@ -159,9 +159,9 @@
     </div>
     <div class="row">
         <div class="col-sm-1"> </div>
-        <div class="col-sm-5 divmargin well well-sm" ng-controller="gradesCtrl">
+        <div ng-show="notRatedWeekly.length != 0" class="col-sm-5 divmargin well well-sm" ng-controller="gradesCtrl">
             <h4 class="text-center">Veckovis feedback för dina pågående kurser</h4>
-            <label for="selectFinishedCourse">Välj en pågående kurs och ge din feedback</label><br>
+            <label for="selectFinishedCourse">Välj en pågående kurs och ge din feedback*</label><br>
             <select name="selectFinishedCourse" ng-model="activeCourseWeeklyFeedback">
                         <option ng-repeat="course in notRatedWeekly" ng-model="activeCourseWeeklyFeedback">{{course.key}} {{course.week}}</option>
                     </select>
