--- a/Webb/manage.html
+++ b/Webb/manage.html
@@ -17,6 +17,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-animate.js"></script>
     <script src="https://www.gstatic.com/firebasejs/3.6.6/firebase.js"></script>
     <script src="https://cdn.firebase.com/libs/angularfire/2.3.0/angularfire.min.js"></script>
+    <script src="bower_components/chart.js/dist/Chart.min.js"></script>
+    <script src="bower_components/angular-chart.js/dist/angular-chart.min.js"></script>
     <script type="text/javascript" src="js/database.js"></script>
     <script src="js/qrcode.min.js"></script>
     <script src="js/angular-qr.min.js"></script>
@@ -39,7 +41,17 @@
                 <p ng-if="error">Fel: <strong>{{ error }}</strong></p>
             </div>
         </div>
-        <div class="col-sm-4"> </div>    </div>
+        <div class="col-sm-4"> </div>
+    </div>
+
+    <div class="row">
+        <div class="col-sm-4">
+            <div id="doughnut" ng-controller="DoughnutCtrl">
+                <canvas id="doughnut" class="chart chart-doughnut" chart-data="data" chart-labels="labels">
+                </canvas>
+            </div>
+        </div>
+    </div>
 
 </body>
 
