--- a/Webb/qr.html
+++ b/Webb/qr.html
@@ -46,6 +46,8 @@
       <h3 ng-hide="selectedCourse == 'NONE'">Studenter som checkat in</h3>
       <h5 ng-repeat="students in studentsLoggedIn" ng-hide="selectedCourse == 'NONE'">{{students}}
     </h5>
+
+      </h5>
     </div>
     <div class="col-sm-6">
       <div id="qr" ng-hide="selectedCourse == 'NONE'">
@@ -60,71 +62,42 @@
 
   </div>
 
-<h5>
+  <h5>
   Antal närvarande studenter
 </h5>
 
   <style>
-    .chart rect {
-      fill: steelblue;
-    }
-
-    .chart text {
-      fill: white;
+    .chart div {
       font: 10px sans-serif;
-      text-anchor: end;
+      background-color: steelblue;
+      text-align: right;
+      padding: 3px;
+      margin: 1px;
+      color: white;
     }
   </style>
-  <svg class="chart"></svg>
+  <div class="chart"></div>
   <script src="https://d3js.org/d3.v4.min.js">
   </script>
+
   <script>
-    var width = 420,
-      barHeight = 20;
+    var data = [23, 42]; //antal inloggade studenter
 
     var x = d3.scaleLinear()
-      .range([0, width]);
+      .domain([0, d3.max(data)])
+      .range([0, 420]);
 
-    var chart = d3.select(".chart")
-      .attr("width", width);
-
-    d3.tsv("data.tsv", type, function(error, data) {
-      x.domain([0, d3.max(data, function(d) {
-        return d.value;
-      })]);
-
-      chart.attr("height", barHeight * data.length);
-
-      var bar = chart.selectAll("g")
-        .data(data)
-        .enter().append("g")
-        .attr("transform", function(d, i) {
-          return "translate(0," + i * barHeight + ")";
-        });
-
-      bar.append("rect")
-        .attr("width", function(d) {
-          return x(d.value);
-        })
-        .attr("height", barHeight - 1);
-
-      bar.append("text")
-        .attr("x", function(d) {
-          return x(d.value) - 3;
-        })
-        .attr("y", barHeight / 2)
-        .attr("dy", ".35em")
-        .text(function(d) {
-          return d.value;
-        });
-    });
-
-    function type(d) {
-      d.value = +d.value; // coerce to number
-      return d;
-    }
+    d3.select(".chart")
+      .selectAll("div")
+      .data(data)
+      .enter().append("div")
+      .style("width", function(d) {
+        return x(d) + "px";
+      })
+      .text(function(d) {
+        return d;
+      });
   </script>
-
 </body>
 
 </html>
