number of signed in students shows

--- a/Webb/qr.html
+++ b/Webb/qr.html
@@ -50,6 +50,8 @@
     </h5>
 
       </h5>
+
+      ANTAL : {{studentCount}} SLUT ANTAL
     </div>
     <div class="col-sm-6">
       <div id="qr" ng-hide="selectedCourse == 'NONE'">
@@ -65,7 +67,7 @@
   </div>
 
   <h5>
-  Antal närvarande studenter
+  Antal närvarande studenter 
 </h5>
 
   <style>
