added ta närvaro button

--- a/Webb/teacherLoggedIn.html
+++ b/Webb/teacherLoggedIn.html
@@ -75,7 +75,9 @@
                     ng-click="writeNews(selectedCourse, newsName, newsDescription)">Publicera nyhet</button>
             </form>
         </div>
-        <div class="col-sm-5"></div>
+        <div class="col-sm-5">
+        <a href="qr.html"><button class="btn btn-lg btn-success">Ta närvaro</button></a> 
+        </div>
         <div class="col-sm-1"></div>
     </div>
 </body> 
