--- a/Webb/teacherLoggedIn.html
+++ b/Webb/teacherLoggedIn.html
@@ -44,19 +44,6 @@
         </div>
     </nav>
      <h1 class="text-center whiteText">Välkommen {{user.Name}}</h1>
-    <div class="row">
-        <div class="col-sm-1"></div>
-        <div class="col-sm-10  well well-sm">
-            <h3 class="text-center">Mina kurser</h3>
-            <div ng-repeat="course in coursesByTeacher" class="panel panel-default">
-                <div ng-click="value = !value" ng-class="{ active: value }" class="panel-heading">{{course.$id}}</div>
-                <div class="panel-body animate-hide" ng-show="value">
-                    <br>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-1"></div>
-    </div>
 
     <div class="row">
         <div class="col-sm-1"></div>
@@ -76,7 +63,14 @@
             </form>
         </div>
         <div class="col-sm-5">
-        <a href="qr.html"><button class="btn btn-lg btn-success">Ta närvaro</button></a> 
+         <div class="well well-sm">
+            <h3 class="text-center">Mina kurser</h3>
+            <a href="qr.html"><button class="btn btn-lg btn-success">Ta närvaro</button></a> <br><br>
+            <div ng-repeat="course in coursesByTeacher" class="panel panel-default">
+                <div  class="panel-heading">{{course.$id}}</div>
+                <div class="panel-body animate-hide" ng-show="value">
+                    <br>
+                </div>
         </div>
         <div class="col-sm-1"></div>
     </div>
