--- a/Webb/teacherLoggedIn.html
+++ b/Webb/teacherLoggedIn.html
@@ -67,13 +67,13 @@
         <div class="col-sm-5">
 
             <div class="well well-sm">
-                <h3 class="text-center">Klassens humör</h3>
+                <h3 class="text-center">Klassens humör idag</h3>
                 <center>
-                <div id="doughnut" ng-controller="DoughnutCtrl">
-                    <canvas id="doughnut" class="chart chart-doughnut" chart-data="data" chart-labels="labels">
-                    </canvas>
-                    <br>Antal elever som röstat idag: {{totalVotes}}
-                </div>
+                    <div id="doughnut" ng-controller="DoughnutCtrl">
+                        <canvas id="doughnut" class="chart chart-doughnut" chart-data="data" chart-labels="labels">
+                        </canvas>
+                        <br>Antal elever som röstat idag: {{totalVotes}}
+                    </div>
                 </center>
             </div>
             <div class="well well-sm">
