--- a/Webb/betyg.html
+++ b/Webb/betyg.html
@@ -53,13 +53,23 @@
             <h1 class="text-center">Betyg</h1>
             <div class="row">
                 <div class="col-sm-1"> </div>
-                <div class="col-sm-5 divmargin well well-sm">
-                    <h4 class="text-center">Betyg på avslutade kurser</h4>
-                    <div ng-repeat="course in myCourses" ng-show="{{course.details.status === 'finished'}}">
-                        <div>
-                            <Strong>{{course.details.name}}</Strong>
-                            <p ng-repeat="grade in globalGrades" ng-if="grade.key == course.details.courseCode">Slutbetyg på denna kurs: <strong>{{grade.grade}}</strong> </p>
+                <div class="col-sm-5">
+                    <div class="divmargin well well-sm">
+                        <h4 class="text-center">Betyg på avslutade kurser</h4>
+                        <div ng-repeat="course in myCourses" ng-show="{{course.details.status === 'finished'}}">
+                            <div>
+                                <Strong>{{course.details.name}}</Strong>
+                                <p ng-repeat="grade in globalGrades" ng-if="grade.key == course.details.courseCode">Slutbetyg på denna kurs: <strong>{{grade.grade}}</strong> </p>
+                            </div>
                         </div>
+                    </div>
+                    <div ng-show="finishedNotRated.length != 0" class="divmargin well well-sm" ng-controller="gradesCtrl">
+                        <h4 class="text-center">Ge feedback på avslutade kurser</h4>
+                        <label for="selectFinishedCourse">Välj en avslutad kurs och ge din feedback*</label><br>
+                        <select name="selectFinishedCourse" ng-model="finishedCourseFeedback" required>
+                        <option ng-repeat="course in finishedNotRated" ng-model="finishedCourseFeedback">{{course.key}}</option>
+                    </select>
+                        <form name="myForm" sf-schema="schema" sf-form="form" sf-model="model" ng-submit="onSubmit(finishedCourseFeedback, myForm)"></form>
                     </div>
                 </div>
 
@@ -77,18 +87,8 @@
                             <br>
                         </div>
                     </div>
-                    <div class="col-sm-1"> </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-1"> </div>
-                <div ng-show="finishedNotRated.length != 0" class="col-sm-5 divmargin well well-sm" ng-controller="gradesCtrl">
-                    <h4 class="text-center">Ge feedback på avslutade kurser</h4>
-                    <label for="selectFinishedCourse">Välj en avslutad kurs och ge din feedback*</label><br>
-                    <select  name="selectFinishedCourse" ng-model="finishedCourseFeedback" required>
-                        <option ng-repeat="course in finishedNotRated" ng-model="finishedCourseFeedback">{{course.key}}</option>
-                    </select>
-                    <form name="myForm" sf-schema="schema" sf-form="form" sf-model="model" ng-submit="onSubmit(finishedCourseFeedback, myForm)"></form>
+                    <div class="col-sm-1"> </div>
                 </div>
             </div>
 </body>
